Fix Section Item action button alignment
Align the buttons to the right of the container

--- a/app/assets/stylesheets/section.css
+++ b/app/assets/stylesheets/section.css
@@ -110,7 +110,8 @@
 
   .item-actions {
     order: 1;
-    margin-left: 5px;
+    margin-left: auto;
+    float: left;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
